--- a/css/Layout.css
+++ b/css/Layout.css
@@ -1,3 +1,55 @@
 body p {
     text-align: center;
 }
+
+header{
+    height: 75px;
+    width: 480px;
+    padding-top: 37.5px;
+}
+main :first-child{
+    width: 480px;
+    height: 140px;
+    padding-top: 70px;
+}
+main :nth-child(2){
+    width: 480px;
+    height: 125px;
+    padding-top: 62.5px;
+}
+main :nth-child(3){
+    width: 480px;
+    height: 125px;
+    padding-top: 62.5px;
+
+}
+main :nth-child(4){
+    width: 240px;
+    float: left;
+    height: 250px;
+    padding-top: 125px;
+}
+main :nth-child(5){
+    width: 240px;
+    float: left;
+    height: 250px;
+    padding-top: 125px;
+}
+main :nth-child(6){
+    width: 240px;
+    float: left;
+    height: 250px;
+    padding-top: 125px;
+}
+main :nth-child(7){
+    width: 240px;
+    float: left;
+    height: 250px;
+    padding-top: 125px;
+}
+main :last-child{
+    width: 480px;
+    height: 80px;
+    padding-top: 40px;
+    clear: both;
+}
