--- a/css/Layout.css
+++ b/css/Layout.css
@@ -7,6 +7,10 @@ header{
     width: 480px;
     padding-top: 37.5px;
 }
+main section{
+    padding: 0%;
+    margin: 0%;
+}
 main :first-child{
     width: 480px;
     height: 140px;
@@ -53,3 +57,65 @@ main :last-child{
     padding-top: 40px;
     clear: both;
 }
+
+/* @media( min-width: 768px ) {
+    header{
+        height: 100px;
+        width: 100%;
+        padding-top: 50px;
+    }
+    main :first-child{
+        width: 26.04%;
+        height: 600px;
+        padding-top: 70px;
+        float: left;
+    }
+    main :nth-child(2){
+        width: 49.479%;
+        height: 125px;
+        padding-top: 62.5px;
+        float: left;
+    }
+    main :nth-child(3){
+        width: 49.479%;
+        height: 125px;
+        padding-top: 62.5px;
+        float: left;
+    }
+    main :nth-child(4){
+        width: 24.74%;
+        float: left;
+        height: 250px;
+        padding-top: 125px;
+    }
+    main :nth-child(5){
+        width: 24.74%;
+        float: left;
+        height: 250px;
+        padding-top: 125px;
+    }
+    main :nth-child(6){
+        width: 24.74%;
+        float: left;
+        height: 250px;
+        padding-top: 125px;
+    }
+    main :nth-child(7){
+        width: 24.74%;
+        float: left;
+        height: 250px;
+        padding-top: 125px;
+    }
+    main :last-child{
+        width: 98.96%;
+        height: 150px;
+        padding-top: 40px;
+        clear: both;
+    }
+    section :first-child{
+        margin-top: 0%;
+    }
+    header {
+        margin-bottom: 0%;
+    }
+} */
