--- a/css/Layout.css
+++ b/css/Layout.css
@@ -1,121 +1,95 @@
-body p {
-    text-align: center;
+body{
+    width: 480px;
 }
-
-header{
+body :first-child{
     height: 75px;
-    width: 480px;
-    padding-top: 37.5px;
+    width: 100%;   
 }
-main section{
-    padding: 0%;
-    margin: 0%;
+body :nth-child(2){
+    height: 150px;
+    width: 100%;
 }
-main :first-child{
-    width: 480px;
-    height: 140px;
-    padding-top: 70px;
-}
-main :nth-child(2){
-    width: 480px;
+body :nth-child(3){
     height: 125px;
-    padding-top: 62.5px;
+    width: 100%;
 }
-main :nth-child(3){
-    width: 480px;
+body :nth-child(4){
     height: 125px;
-    padding-top: 62.5px;
-
+    width: 100%;
 }
-main :nth-child(4){
-    width: 240px;
-    float: left;
+body :nth-child(5){
     height: 250px;
-    padding-top: 125px;
-}
-main :nth-child(5){
-    width: 240px;
+    width: 50%;
     float: left;
-    height: 250px;
-    padding-top: 125px;
 }
-main :nth-child(6){
-    width: 240px;
+body :nth-child(6){
+    height: 250px;  
+    width: 50%;
     float: left;
-    height: 250px;
-    padding-top: 125px;
 }
-main :nth-child(7){
-    width: 240px;
+body :nth-child(7){
+    height: 250px;
+    width: 50%;
     float: left;
-    height: 250px;
-    padding-top: 125px;
 }
-main :last-child{
-    width: 480px;
+body :nth-child(8){
+    height: 250px;   
+    width: 50%;
+    float: left;
+}
+#last{
     height: 80px;
-    padding-top: 40px;
     clear: both;
+    width: 100%;
 }
 
-/* @media( min-width: 768px ) {
-    header{
-        height: 100px;
+@media( min-width: 768px ){
+    body{
         width: 100%;
-        padding-top: 50px;
     }
-    main :first-child{
-        width: 26.04%;
+    body :first-child{
+        height: 100px;
+        width: 100%;   
+    }
+    body :nth-child(2){
         height: 600px;
-        padding-top: 70px;
+        width: 20.83%;
         float: left;
     }
-    main :nth-child(2){
-        width: 49.479%;
-        height: 125px;
-        padding-top: 62.5px;
+    body :nth-child(3){
+        height: 200px;
+        width: 39.58%;
         float: left;
     }
-    main :nth-child(3){
-        width: 49.479%;
-        height: 125px;
-        padding-top: 62.5px;
+    body :nth-child(4){
+        height: 200px;
+        width: 39.58%;
         float: left;
     }
-    main :nth-child(4){
-        width: 24.74%;
-        float: left;
+    body :nth-child(5){
         height: 250px;
-        padding-top: 125px;
-    }
-    main :nth-child(5){
-        width: 24.74%;
+        width: 19.79%;
         float: left;
-        height: 250px;
-        padding-top: 125px;
     }
-    main :nth-child(6){
-        width: 24.74%;
+    body :nth-child(6){
+        height: 250px;  
+        width: 19.79%;
         float: left;
-        height: 250px;
-        padding-top: 125px;
     }
-    main :nth-child(7){
-        width: 24.74%;
+    body :nth-child(7){
+        height: 250px;
+        width: 19.79%;
         float: left;
-        height: 250px;
-        padding-top: 125px;
     }
-    main :last-child{
-        width: 98.96%;
+    body :nth-child(8){
+        height: 250px;   
+        width: 19.79%;
+        float: left;
+    }
+    #last{
         height: 150px;
-        padding-top: 40px;
-        clear: both;
+        float: left;
+        clear: right;
+        width: 79.17%;
     }
-    section :first-child{
-        margin-top: 0%;
-    }
-    header {
-        margin-bottom: 0%;
-    }
-} */
+}
